[project]
name = "fast-api-20260303"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.135.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 101

[tool.ruff.format]
quote-style = "double"

#рекомендуется по pep8
indent-style = "space" 

docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "A", "C", "T"]

# ignore = []
